--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <title>home</title>
 </head>
 <body>
-   welcome to  <%= title %>
-   <a href="/login">login</a>
+   welcome to  <%= login %>
+   <a href="/login">signout</a>
 </body>
 </html>
